[package]
name = "webhookbox"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }

sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "uuid",
    "chrono",
    "json",
] }

dotenvy = "0.15"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
