[package]
name = "webhookbox"
version = "0.1.0"
edition = "2021"
default-run = "webhookbox"
[dependencies]


axum = "0.7"
tokio = { version = "1.36", features = ["full"] }

sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "macros",
    "uuid",
    "chrono",
    "json",
] }

dotenvy = "0.15"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
